
[TestComment/GET_/comment/37176230_with_a_succesful_response - 1]
http.Header{
    "Cache-Control": {"max-age=0"},
    "Content-Type":  {"text/html"},
    "Etag":          {"W/\"20-621f8149c61fe1bfd907d26a856434cf3ce1678c\""},
}
int(200)
<title>
 Hackernews
</title>
<meta charset="UTF-8">
<meta name="description" content="Hackernews example app in htmx and Go" lang="en">
<link rel="stylesheet" href="/assets/main.css">
<link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
<script src="https://unpkg.com/htmx.org@1.9.4" integrity="sha384-zUfuhFKKZCbHTY6aRR46gxiqszMk5tcHjsVFxnUo8VMus4kHGVdIYVbOYYNlKmHV" crossorigin="anonymous">
</script>
<script src="https://unpkg.com/ulid@2.3.0/dist/index.umd.js">
</script>
<script src="/assets/scripts.js">
</script>
<main>
 <header class="topBar">
  <a class="logo" href="/">
   <img src="/assets/y18.gif">
   <span class="logo-caption">
    Hacker News
   </span>
  </a>
 </header>
 <section class="content">
  <article class="comment expanded">
   <div class="comment-body">
    The link seems to be Slashdotted into oblivion.
   </div>
   <footer>
    <span>
     CapitalistCartr
    </span>
    <span data-timestamp="">
     1692369360
    </span>
   </footer>
   <section class="comments">
   </section>
  </article>
 </section>
</main>

---

[TestComment/GET_/parts/comment/37176230_with_a_succesful_response - 1]
http.Header{
    "Cache-Control": {"max-age=0"},
    "Content-Type":  {"text/html"},
    "Etag":          {"W/\"20-621f8149c61fe1bfd907d26a856434cf3ce1678c\""},
}
int(200)
<article class="comment expanded">
 <div class="comment-body">
  The link seems to be Slashdotted into oblivion.
 </div>
 <footer>
  <span>
   CapitalistCartr
  </span>
  <span data-timestamp="">
   1692369360
  </span>
 </footer>
</article>

---
